--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gsap": "^3.7.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-hook-form": "^7.12.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
